--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,34 +1,74 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit listing</title>
-</head>
+<%- layout("layouts/boilerplate")%>
 <body>
-    <h1>Edit the listing</h1>
-    <form method = "POST" action = "/listings/<%= detail._id%>/?_method=PUT">
-        <input type="text" name="listing[title]" value = "<%=detail.title%>"/>
-        <br/>
-        <br/>
-        <textarea type="text" name="listing[description]"> <%=detail.description%> </textarea>
-        <br/>
-        <br/>
-        <input type="text" name = listing[image] value = "<%=detail.image %>">
+        <div class="row mt-3">
+            <div class="col offset-2">
+                <h1>Edit the listing</h1>
+                <form method = "POST" action = "/listings/<%= detail._id%>/?_method=PUT">
+                    <div class="mb-3">
+                        <label for="Title" class = form-label>
+                            Title
+                        </label>
+                        <input type="text"
+                        name="listing[title]"
+                        value = "<%=detail.title%>" class = "form-control"/>
+                    </div>
+                
+                    <div class="mb-3">
+                        <label for="Description" class = form-label>
+                            Description
+                        </label>
+                        <textarea type="text"
+                        name="listing[description]" class = "form-control">
+                        <%=detail.description%> </textarea>
+                    </div>
 
-        <input type="number" name="listing[price]" value = "<%=detail.price%>"/>
-        <br/>
-        <br/>
+                    <div class="mb-3">
+                        <label for="Image" class = form-label>
+                        Image Link
+                        </label>
+                        <input type="text"
+                        name = listing[image]
+                        value = "<%=detail.image %>"
+                        class = "form-control">
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="mb-3">
+                                <label for="Price" class = form-label>
+                                Price
+                                </label>
+                                <input type="number"
+                                name="listing[price]"
+                                value = "<%=detail.price%>"
+                                class = "form-control"/>
+                            </div>
+                        </div>
 
-        <input type="text" name="listing[country]" value = "<%=detail.country%>"/>
-        <br/>
-        <br/>
-
-        <input type="text" name="listing[location]" value = "<%=detail.location%>"/>
-        <br/>
-        <br/>
-        <button>Save</button> 
-
-    </form>
+                        <div class="col-md-8">          
+                            <div class="mb-3">
+                                <label for="Country" class = form-label>
+                                Country
+                                </label>
+                                <input type="text"
+                                name="listing[country]"
+                                value = "<%=detail.country%>"
+                                class = "form-control"/>
+                            </div>
+                        </div>
+                    </div>
+                  
+                
+                    <div class="mb-3">
+                        <label for="Location" class = form-label>
+                        Loaction
+                        </label>
+                        <input type="text"
+                        name="listing[location]"
+                        value = "<%=detail.location%>"
+                        class = "form-control"/>
+                    </div>
+                    <button class = "btn btn-dark edit-btn mt-3">Edit</button> 
+                </form>
+            </div>
+        </div>
 </body>
-</html>
