--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,19 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
+<%-layout("layouts/boilerplate") %>
 <body>
-    <h3>All Listings</h3> 
-    <form method = "GET" action="/listings/new">
-        <button>Create</button>
-    </form>
-    <ul>
+    <h3>All Listings</h3>
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <% for(let listing of allListings){ %>
-            <li><a href="/listings/<%= listing._id %>"><%= listing.title %></a> </li>
+            <div class="card col">
+                <a href="/listings/<%= listing._id%>" class = "listing-link">
+                    <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem">
+                    <div class="card-img-overlay">
+                
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">
+                            <b> <%=listing.title%> </b> <br>
+                        </p>
+                        <p>
+                            &#8377; <%=listing.price.toLocaleString("en-IN") %> /night
+                        </p>
+                    </div>
+                </a>
+            </div>
         <% } %>
-    </ul>
+    </div>
 </body>
-</html>
