--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,26 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<%-layout("layouts/boilerplate") %>
 <body>
-    <h3>Listing Details</h3>
-    <ul>
-        <li><%= detail._id %></li>
-        <li><%= detail.title %></li>
-        <li><%= detail.description %></li>
-        <li>&#8377; <%= detail.price.toLocaleString("en-IN") %></li>
-        <li><%= detail.location %></li>
-        <li><%= detail.country %></li>
-    </ul>
-       <form method = "GET" action="/listings/<%=detail._id%>/edit">
-            <button>Edit</button>
-        </form>
-        <br/> <br/>
-        <form method ="POST" action = "/listings/<%=detail._id%>/?_method=DELETE">
-            <button>Delete this listing</button>
-        </form>
+    <div class="row mt-3">
+        <div class="col-8 offset-3">
+            <h3>Listing Details</h3>
+        </div>
+    </div>
+            <div class="card col-6 offset-3 show-card">
+                    <img src="<%=detail.image.url %>" class="card-img-top show-img" alt="listing_image">
+                    <div class="card-body mb-3">
+                        <p class="card-text">
+                           <b><%= detail.title %> </b> <br/>
+                            <%= detail.description %> <br/>
+                            &#8377; <%= detail.price.toLocaleString("en-IN") %> <br/>
+                            <%= detail.location %> <br/>
+                            <%= detail.country %> <br/>
+                        </p>
+                    </div>
+                <div class="btns">
+                    <div class="col-1 offset-2">
+                        <form method = "GET" action="/listings/<%=detail._id%>/edit">
+                            <button class = "btn btn-dark edit-btn">Edit</button>
+                        </form>
+                    </div>
+
+                    <div class="offset-4">
+                        <form method ="POST" action = "/listings/<%=detail._id%>/?_method=DELETE">
+                            <button class = "btn btn-dark dlt-btn">Delete</button>
+                        </form>
+                    </div> 
+                </div>
+                  
+        </div>
 </body>
-</html>
